--- a/PractiseProject/SlideShow/index.html
+++ b/PractiseProject/SlideShow/index.html
@@ -4,42 +4,18 @@
         <title>Slide Show</title>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <style>
-            html, body {
-                width: 100%;
-                height: 100%;
-                margin: 0;
-            }
-            .slide {
-                border: 1px solid #ccc;
-                width: 100%;
-                height: 400px;
-                max-width: 600px;
-                margin: 0 auto;
-                position: relative;
-                z-index: 1;
-            }
-            .left, .right {
-                position: absolute;
-                border-right: 1px solid #ccc;                
-                width: 50px;
-                height: 100%;
-                cursor: pointer;
-                background-color: #ccc;
-                opacity: 0.2;
-                z-index: 2;
-            }
-            .right {
-                right: 0;
-                border-left: 1px solid #ccc;
-                border-right: none;
-            }
-        </style>
+        <link href="style.css" rel="stylesheet">
     </head>
     <body>
-        <main class="slide">
-            <div class="left"></div>
-            <div class="right"></div>
+        <main class="container">
+            <a href="#" class="slide slide1 slide-active"></a>
+            <a href="#" class="slide slide2"></a>
+            <a href="#" class="slide slide3"></a>
+            <div class="dots">
+                <span class="dot-active"></span>
+                <span></span>
+                <span></span>
+            </div>
         </main>
     </body>
 </html>
