Landing Page Part 1

--- a/index.html
+++ b/index.html
@@ -5,23 +5,20 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="stylesheets/stylesheet.css" rel="stylesheet">
-        <script src="https://use.fontawesome.com/38201af01b.js"></script>
     </head>
     <body>
-        <canvas id="canvas"></canvas>
-        <main class="portfolio">
-            <aside class="avatar"></aside>
-            <section class="user-info">
-                <h1>rookielzy</h1>
-                <h1>罗志尧</h1>
-                <h2>Web Developer</h1>
-                <ul>
-                    <li class="project"><a href="#" class="link"><img src="images/box.png" alt=""></a></li>
-                    <li class="github"><a href="https://github.com/rookielzy" class="link"><i class="fa fa-github" aria-hidden="true"></i></a></li>
-                </ul>
-            </section>
-        </main>
-        <script src="javascripts/main.js"></script>
-        <script src="javascripts/colorfulRainy.js"></script>
+        <header>
+            <div id="logo">
+                <div class="cube1"></div>
+                <div class="cube2"></div>
+                <span class="word">L</span>  
+            </div>
+        </header>
+        <section class="intro">
+            <h1>HELLO THERE</h1>
+            <h4>My name is Luo Zhiyao.</h4>
+            <p>I'm a Web Developer who likes to make pretty things.</p>
+            <button>Read More</button>
+        </section>
     </body>
 </html>
