Landing Page Part 2

--- a/index.html
+++ b/index.html
@@ -15,10 +15,27 @@
             </div>
         </header>
         <section class="intro">
-            <h1>HELLO THERE</h1>
-            <h4>My name is Luo Zhiyao.</h4>
-            <p>I'm a Web Developer who likes to make pretty things.</p>
-            <button>Read More</button>
+            <div class="intro-details">
+                <h1>HELLO THERE</h1>
+                <h4>My name is Luo Zhiyao.</h4>
+                <p>I'm a Web Developer who likes to make pretty things.</p>
+                <button>Read More</button>
+            </div>
+            <div class="flex-container">
+                    <div class="unit">
+                        <div class="heart">
+                            <div class="heart-piece-0"></div>
+                            <div class="heart-piece-1"></div>
+                            <div class="heart-piece-2"></div>
+                            <div class="heart-piece-3"></div>
+                            <div class="heart-piece-4"></div>
+                            <div class="heart-piece-5"></div>
+                            <div class="heart-piece-6"></div>
+                            <div class="heart-piece-7"></div>
+                            <div class="heart-piece-8"></div>
+                        </div>
+                    </div>
+                </div>
         </section>
     </body>
 </html>
