TODO: Project Images

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link href="stylesheets/stylesheet.css" rel="stylesheet">
+        <script src="javascripts/jquery-2.2.1.min.js"></script>
     </head>
     <body>
         <header>
@@ -17,25 +18,54 @@
         <section class="intro">
             <div class="intro-details">
                 <h1>HELLO THERE</h1>
-                <h4>My name is Luo Zhiyao.</h4>
-                <p>I'm a Web Developer who likes to make pretty things.</p>
-                <button>Read More</button>
+                <h4>罗志尧</h4>
+                <p>前端开发工程师</p>
             </div>
-            <div class="flex-container">
-                    <div class="unit">
-                        <div class="heart">
-                            <div class="heart-piece-0"></div>
-                            <div class="heart-piece-1"></div>
-                            <div class="heart-piece-2"></div>
-                            <div class="heart-piece-3"></div>
-                            <div class="heart-piece-4"></div>
-                            <div class="heart-piece-5"></div>
-                            <div class="heart-piece-6"></div>
-                            <div class="heart-piece-7"></div>
-                            <div class="heart-piece-8"></div>
-                        </div>
+            <div class="read-more" id="box">
+                <a href="https://github.com/rookielzy" target="_blank">了解更多</a>
+            </div>
+        </section>
+        <section class="main">
+            <section class="bookShop">
+                <div>
+                    <h1 class="title">react react-router redux mongodb</h1>
+                    <div class="content">
+                        <img src="./images/bg.gif" alt="">
+                        <p>一个类似书城具有REST风格设计的WebApp，技术栈采用：React.js，react-router，redux，axios，Express.js 和 MongoDB等进行开发。具有CRUD的基本功能，为API设置了代理服务器进行跨域资源请求。</p>
                     </div>
                 </div>
+            </section>
+            <section class="fish-fish">
+                <div>
+                    <h1 class="title">nodejs Express.js WebRTC Face++</h1>
+                    <div class="content">
+                        <img src="./images/bg.gif" alt="">
+                        <p>一个能够对人脸进行分析，识别和对比，对身份证和驾驶证进行信息获取的WebApp。UI采用Bootstrap 3布局，由Express.js提供路由驱动，结合WebRTC和Face++的API编写而成。基本所有的识别都通过Promise完成异步工作，提高效率，代码可读性更强。</p>
+                    </div>
+                </div>
+            </section>
+            <section class="face-detect">
+                <div>
+                    <h1 class="title">react react-router firebase</h1>
+                    <div class="content">
+                        <img src="./images/bg.gif" alt="">
+                        <p>一个类似餐厅点餐的WebApp，按照ES6的标准，主要使用react.js, react-router进行视图层的开发，后端使用Firebase进行管理和身份验证。提供了登陆管理，点餐，添加，删除和修改的功能。最后利用CSS3的Flex布局和动画效果对项目进行美化，增强了用户体验。</p>
+                    </div>
+                </div>
+            </section>
+            <section class="game">
+                    <div>
+                        <h1 class="title">JS 原型链 继承</h1>
+                        <div class="content">
+                            <img src="./images/bg.gif" alt="">
+                            <p>一个射击与生存地HTML5游戏。纯JavaScript编写，没有使用任何框架。通过使用JS伪类的概念，利用继承，构造函数，原型链的面向对象的概念为游戏增加丰富的功能和优化代码，减少冗余代码，增强代码可读性。</p>
+                        </div>
+                    </div>
+            </section>
         </section>
+        <section class="footer">
+            <footer></footer>
+        </section>
+        <script src="javascripts/app.js"></script>
     </body>
 </html>
