--- a/index.html
+++ b/index.html
@@ -26,45 +26,75 @@
             </div>
         </section>
         <section class="main">
-            <section class="bookShop">
-                <div>
-                    <h1 class="title">react react-router redux mongodb</h1>
-                    <div class="content">
-                        <img src="./images/bg.gif" alt="">
-                        <p>一个类似书城具有REST风格设计的WebApp，技术栈采用：React.js，react-router，redux，axios，Express.js 和 MongoDB等进行开发。具有CRUD的基本功能，为API设置了代理服务器进行跨域资源请求。</p>
-                    </div>
-                </div>
-            </section>
-            <section class="fish-fish">
-                <div>
-                    <h1 class="title">nodejs Express.js WebRTC Face++</h1>
-                    <div class="content">
-                        <img src="./images/bg.gif" alt="">
-                        <p>一个能够对人脸进行分析，识别和对比，对身份证和驾驶证进行信息获取的WebApp。UI采用Bootstrap 3布局，由Express.js提供路由驱动，结合WebRTC和Face++的API编写而成。基本所有的识别都通过Promise完成异步工作，提高效率，代码可读性更强。</p>
-                    </div>
-                </div>
-            </section>
-            <section class="face-detect">
-                <div>
-                    <h1 class="title">react react-router firebase</h1>
-                    <div class="content">
-                        <img src="./images/bg.gif" alt="">
-                        <p>一个类似餐厅点餐的WebApp，按照ES6的标准，主要使用react.js, react-router进行视图层的开发，后端使用Firebase进行管理和身份验证。提供了登陆管理，点餐，添加，删除和修改的功能。最后利用CSS3的Flex布局和动画效果对项目进行美化，增强了用户体验。</p>
-                    </div>
-                </div>
-            </section>
-            <section class="game">
-                    <div>
-                        <h1 class="title">JS 原型链 继承</h1>
-                        <div class="content">
-                            <img src="./images/bg.gif" alt="">
-                            <p>一个射击与生存地HTML5游戏。纯JavaScript编写，没有使用任何框架。通过使用JS伪类的概念，利用继承，构造函数，原型链的面向对象的概念为游戏增加丰富的功能和优化代码，减少冗余代码，增强代码可读性。</p>
-                        </div>
-                    </div>
-            </section>
+            <figure class="snip1336">
+                <img src="./images/bookShop.png" alt="sample87" />
+                <figcaption>
+                    <img src="./images/bookShop.png" alt="profile-sample4" class="profile" />
+                    <h2>类书城WebApp
+                        <span>React React-Router Redux MongoDB</span>
+                    </h2>
+                    <p>一个类似书城具有REST风格设计的WebApp，技术栈采用：React.js，react-router，redux，axios，Express.js 和 MongoDB等进行开发。具有CRUD的基本功能，为API设置了代理服务器进行跨域资源请求。
+                        </p>
+                    <a href="https://github.com/rookielzy/Way-To-FullStack/tree/gh-pages/The-Journey-Begins/reduxApp" class="follow">GitHub</a>
+                    <a href="https://still-thicket-95070.herokuapp.com/" class="info">展示</a>
+                </figcaption>
+            </figure>
+            <figure class="snip1336">
+                <img src="./images/face.png" alt="sample87" />
+                <figcaption>
+                    <img src="./images/face.png" alt="profile-sample4" class="profile" />
+                    <h2>人脸证件识别WebApp
+                        <span>Node.js Express.js WebRTC Face++</span>
+                    </h2>
+                    <p>一个能够对人脸进行分析，识别和对比，对身份证和驾驶证进行信息获取的WebApp。UI采用Bootstrap 3布局，由Express.js提供路由驱动，结合WebRTC和Face++的API编写而成。基本所有的识别都通过Promise完成异步工作，提高效率，代码可读性更强。</p>
+                    <a href="https://dashboard.heroku.com/apps/damp-brook-46980" class="info">展示</a>
+                </figcaption>
+            </figure>
+            <figure class="snip1336">
+                <img src="./images/fish-fish.png" alt="sample87" />
+                <figcaption>
+                    <img src="./images/fish-fish.png" alt="profile-sample4" class="profile" />
+                    <h2>Fish-Fish
+                        <span>react react-router firebase</span>
+                    </h2>
+                    <p>一个类似餐厅点餐的WebApp，按照ES6的标准，主要使用react.js, react-router进行视图层的开发，后端使用Firebase进行管理和身份验证。提供了登陆管理，点餐，添加，删除和修改的功能。最后利用CSS3的Flex布局和动画效果对项目进行美化，增强了用户体验。</p>
+                    <a href="https://github.com/rookielzy/fish-fish" class="follow">GitHub</a>
+                    <a href="https://rookielzy.github.io/fish-fish/" class="info">展示</a>
+                </figcaption>
+            </figure>
+            <figure class="snip1336">
+                <img src="./images/game.png" alt="sample87" />
+                <figcaption>
+                    <img src="./images/game.png" alt="profile-sample4" class="profile" />
+                    <h2>射击-生存
+                        <span>JS 原型链 继承</span>
+                    </h2>
+                    <p>一个射击与生存地HTML5游戏。纯JavaScript编写，没有使用任何框架。通过使用JS伪类的概念，利用继承，构造函数，原型链的面向对象的概念为游戏增加丰富的功能和优化代码，减少冗余代码，增强代码可读性。</p>
+                    <a href="https://github.com/rookielzy/Way-To-FullStack/tree/gh-pages/HTML5Game" class="follow">GitHub</a>
+                    <a href="https://rookielzy.github.io/Way-To-FullStack/HTML5Game/index.html" class="info">展示</a>
+                </figcaption>
+            </figure>
+            <figure class="snip1336">
+                    <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample87.jpg" alt="sample87" />
+                    <figcaption>
+                        <img src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/331810/sample69.jpg" alt="profile-sample4" class="profile" />
+                        <h2>UI设计
+                            <span>HTML5 CSS3</span>
+                        </h2>
+                        <p>一些CSS3，HTML5的应用例子</p>
+                        <a href="https://github.com/rookielzy/blog/tree/gh-pages/DailyUI100Days" class="follow">GitHub</a>
+                    </figcaption>
+            </figure>
         </section>
         <section class="footer">
-            <footer></footer>
+            <footer>
+                <h1>联系我吧！</h1>
+                <p>
+                    您可以通过发送邮件<a href="mailto:slimjetlzy@gmai.com" class="email">slimjetlzy@gmail.com</a>或者<a href="mailto:136464242@qq.com" class="email">QQ Mail</a>联系我。
+                    也可以随时拨打我的电话或添加我的微信<span class="phone">18826224869</span>。
+                    期望与您共同合作！
+                </p>
+            </footer>
         </section>
         <script src="javascripts/app.js"></script>
     </body>
