--- a/index.html
+++ b/index.html
@@ -27,9 +27,9 @@
         </section>
         <section class="main">
             <figure class="snip1336">
-                <img src="./images/bookShop.png" alt="sample87" />
+                <img src="./images/bookShop.PNG" alt="sample87" />
                 <figcaption>
-                    <img src="./images/bookShop.png" alt="profile-sample4" class="profile" />
+                    <img src="./images/bookShop.PNG" alt="profile-sample4" class="profile" />
                     <h2>类书城WebApp
                         <span>React React-Router Redux MongoDB</span>
                     </h2>
@@ -40,9 +40,9 @@
                 </figcaption>
             </figure>
             <figure class="snip1336">
-                <img src="./images/face.png" alt="sample87" />
+                <img src="./images/face.PNG" alt="sample87" />
                 <figcaption>
-                    <img src="./images/face.png" alt="profile-sample4" class="profile" />
+                    <img src="./images/face.PNG" alt="profile-sample4" class="profile" />
                     <h2>人脸证件识别WebApp
                         <span>Node.js Express.js WebRTC Face++</span>
                     </h2>
@@ -51,9 +51,9 @@
                 </figcaption>
             </figure>
             <figure class="snip1336">
-                <img src="./images/fish-fish.png" alt="sample87" />
+                <img src="./images/fish-fish.PNG" alt="sample87" />
                 <figcaption>
-                    <img src="./images/fish-fish.png" alt="profile-sample4" class="profile" />
+                    <img src="./images/fish-fish.PNG" alt="profile-sample4" class="profile" />
                     <h2>Fish-Fish
                         <span>react react-router firebase</span>
                     </h2>
@@ -63,9 +63,9 @@
                 </figcaption>
             </figure>
             <figure class="snip1336">
-                <img src="./images/game.png" alt="sample87" />
+                <img src="./images/game.PNG" alt="sample87" />
                 <figcaption>
-                    <img src="./images/game.png" alt="profile-sample4" class="profile" />
+                    <img src="./images/game.PNG" alt="profile-sample4" class="profile" />
                     <h2>射击-生存
                         <span>JS 原型链 继承</span>
                     </h2>
